--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-.App {
-  text-align: center;
-}
-
 body{
   font-family: 'Lato', sans-serif;
   background-color: #222;
 
+}
+
+.App {
+  text-align: center;
+  margin: 0 auto;
+  width: 1110px;
 }
