--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,7 +2,7 @@ h1{
     color: #fff;
     font-weight: 500;
     font-size: 3rem;
-    margin: 31px 0;
+    margin: 31px 0 0 0;
     border-bottom: 1px solid #fff;
     padding-bottom: 31px;
 }
