--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
 body{
   font-family: 'Lato', sans-serif;
   background-color: #222;
+  
 
 }
 
 .App {
   text-align: center;
   margin: 0 auto;
-  width: 1110px;
+  max-width: 1100px;
 }
