--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@ body{
   margin: 0 auto;
   max-width: 1100px;
 }
+
+
+@media only screen and (max-width: 800px) {
+  .App {
+    width: 90%;
+  }
+}
