--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,3 +6,9 @@ h1{
     border-bottom: 1px solid #fff;
     padding-bottom: 31px;
 }
+
+@media only screen and (max-width: 800px) {
+    h1{
+        font-size: 2rem;
+    }
+  }
